Added go-releaser and version generation

--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,4 @@ tags
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,macos,vim,linux
+# End of https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,macos,vim,linuxdist/
