--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,7 +23,13 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  name_template: "{{ .Tag}}-{{ .ShortCommit }}"
+release:
+  github:
+    owner: fvumbaca
+    name: journal
+  prerelease: auto
+  name_template: "{{ .Tag }}-{{ .ShortCommit }}"
 changelog:
   sort: asc
   filters:
