Removed old way of building in version

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,6 +13,8 @@ builds:
       - linux
       # - windows # We use $HOME for some default paths atm...
       - darwin
+  - ldflags:
+    - "-X cmd.version={{ .Tag }}"
 archives:
   - replacements:
       darwin: Darwin
