--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,7 +13,7 @@ builds:
       - linux
       # - windows # We use $HOME for some default paths atm...
       - darwin
-  - ldflags:
+    ldflags:
     - "-X cmd.version={{ .Tag }}"
 archives:
   - replacements:
