--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,7 +25,7 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .Tag}}-{{ .ShortCommit }}"
+  name_template: "{{ .Tag }}"
 release:
   github:
     owner: fvumbaca
